# implementacja_systemow_ai_2026_02_07

./: .gitignore  README.md  environment.yml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
01_argv/: click_app.py  skrypt_argparse.py  skrypt_click.py  test.json  test.md
02_env/: env_dot.py  env_var.py
03_config/: config.yaml  config_dataclass.toml  config_dataclass.yaml  read_toml_pydantic.py  read_yaml.py  read_yaml_pydantic.py  save_config.py
04_pakiet/sages_kalkulator/: pyproject.toml  train_model.py
04_pakiet/sages_kalkulator/src/sages_kalkulator/: __init__.py  __main__.py  calculator.py
05_bento/: train_model.py
05_bento/model_service/: bentofile.yaml  service.py
06_rest/: get.py  pingwin.py  post.py
07_streamlit/: formularz.py  iris.py  requirements.txt  uklad.py  wykresy.py
08_mlflow/: experiment.py  experiment_2.py  pobranie_modelu.py
09_mlflow_project/: MLproject  README.md  conda.yaml  evaluate.py  train.py
10_optuna/: 01_random_search_mlflow.py  02_optuna.py  03_optuna_pruner.py  04_optuna_vis.py
11_dvc/: README.md  download_data.py  dvc.yaml  metrics.json  params.yaml  train_model.py
11_dvc/.dvc/: config
11_dvc/data/: .gitignore  dataset.csv.dvc
12_speckit/: README.md
12_speckit/src/: app.py  db.py
ml-project/: pyproject.toml
specs/001-streamlit-todolist/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
testowanie/features/: calculator.feature
testowanie/tests/: test_assert_object.py  test_hypothesis.py  test_kalkulator.py
zadanie_01/: zadanie.py
zadanie_02/: zadanie.py
zadanie_03/: .env  zadanie.py
zadanie_04/: first.toml  output.yaml  second.toml  zadanie.py
zadanie_06/tests/: test_zadanie.py
zadanie_07/features/: tood.feature
zadanie_09/california-housing/: pyproject.toml  train_model.py
zadanie_09/california-housing/src/california_housing/: __init__.py  __main__.py
zadanie_10/: train_model.py
zadanie_11/: README.md  zadanie.py
zadanie_12/: zadanie.py  zadanie_2.py
zadanie_13/: MLproject  README.md  conda.yaml  evaluate.py  train.py
zadanie_14/: zadanie.py
zadanie_15/: dvc.yaml  params.yaml
(+11 files in other folders)
