[project]
name = "ml-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Bartosz Mikulski",email = "mail@mikulskibartosz.name"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ml_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
