[project]
name = "sages-kalkulator"
version = "0.11.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bartosz Mikulski", email = "mail@mikulskibartosz.name" }
]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "joblib==1.3.2",
]

[tool.hatch.build]
ignore-vcs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
