[project]
name = "sages-kalkulator"
version = "0.12.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bartosz Mikulski", email = "mail@mikulskibartosz.name" }
]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "joblib==1.3.2",
]

[tool.hatch.build]
ignore-vcs = true

[project.scripts]
iris-classifier = "sages_kalkulator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
